// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error starting game error when there are not enough players 1`] = `
Object {
  "message": "There are not enough human players.",
  "type": "AssertionError",
}
`;

exports[`error starting game with two players error when non-host starts game 1`] = `
Object {
  "message": "Only a host can start a game.",
  "type": "AssertionError",
}
`;

exports[`error starting game with two players error when there are not enough packs 1`] = `
Object {
  "message": "There are not enough packs.",
  "type": "AssertionError",
}
`;

exports[`joining game accepts valid token 1`] = `
Object {
  "game": Object {
    "handSize": 10,
    "hasPassword": false,
    "id": Any<String>,
    "packs": Array [],
    "specialRules": Object {
      "aiPlayerCount": 0,
      "allowDiscarding": Object {
        "enabled": false,
        "penalty": 0,
      },
      "pickExtra": false,
    },
    "status": "created",
    "timeouts": Object {
      "betweenRounds": 30,
      "judging": 120,
      "playing": 120,
      "revealing": 60,
    },
    "winnerPoints": 20,
  },
  "players": Array [
    Object {
      "id": Any<String>,
      "isAI": false,
      "isActive": true,
      "isHost": true,
      "nickname": "foo",
      "points": 0,
    },
  ],
  "rounds": Array [],
}
`;

exports[`joining game error jwt malformed 1`] = `[Error: Unauthorized: Token is missing or invalid Bearer]`;

exports[`joining game error jwt not valid 1`] = `[Error: Unauthorized: Token is missing or invalid Bearer]`;

exports[`joining game error on locked user 1`] = `[Error: Player is already active.]`;

exports[`perform game works 1`] = `
Object {
  "game": Object {
    "handSize": 10,
    "hasPassword": false,
    "id": Any<String>,
    "packs": Array [
      Object {
        "abbr": "Base-INTL",
        "description": "",
        "icon": "",
        "name": "Base Set (INTL Version)",
        "official": true,
      },
    ],
    "specialRules": Object {
      "aiPlayerCount": 0,
      "allowDiscarding": Object {
        "enabled": false,
        "penalty": 0,
      },
      "pickExtra": false,
    },
    "status": "running",
    "timeouts": Object {
      "betweenRounds": 30,
      "judging": 120,
      "playing": 120,
      "revealing": 60,
    },
    "winnerPoints": 20,
  },
  "players": Any<Array>,
  "rounds": Array [
    Object {
      "discard": Array [],
      "judgeId": Any<String>,
      "prompt": Any<Object>,
      "status": "created",
      "submissions": Array [],
      "timeouts": Object {
        "playing": Any<String>,
      },
    },
  ],
}
`;

exports[`perform game works 2`] = `
Object {
  "deck": Any<Array>,
  "id": Any<String>,
  "isAI": false,
  "isActive": true,
  "isHost": true,
  "nickname": "foo",
  "points": 0,
}
`;
